allow large images to cause scrollbars but keep safari showing the correct height
git-svn-id: https://source.sakaiproject.org/svn/rwiki/trunk@9366 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/rwiki/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
+++ b/rwiki/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
@@ -19,7 +19,7 @@
  *
  **********************************************************************************/
 #rwiki_container {
-  overflow: hidden;
+  overflow: auto;
   height: 100%;
   width: 100%;
 }
